[package]
name = "ghostscan"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = { version = "1", features = ["miniz_oxide"] }
libbpf-rs = "0.22"
libbpf-sys = { version = "1.6.1", features = ["vendored"] }
libc = "0.2"
